Add Contest table block to Homepage (including styling and interaction)

--- a/markup/_layouts/_content/_homepage/upcoming_contest.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest.jade
@@ -1,1 +1,170 @@
-h1 upcoming contest
+div.row.align-items-center
+    div.col-md-12
+        h5 upcoming contests
+
+div.row
+    div.col-lg-12.team
+        div.nl-players-table.nl-contests-table.homepage-table
+
+            ul.nav.nav-tabs(role="tablist")
+                li.nav-item
+                    a.nav-link.active(data-toggle="tab" href="#all" role="tab") NLC2
+                li.nav-item
+                    a.nav-link(data-toggle="tab" href="#gk" role="tab") Free
+                li.nav-item
+                    a.nav-link(data-toggle="tab" href="#d" role="tab") Private
+                li.nav-item
+                    a.nav-link(data-toggle="tab" href="#f" role="tab") My&nbsp;contests
+
+
+            div.tab-content
+                div.tab-pane.active(id="all" role="tabpanel")
+                    div.nl-table-responsive
+                        div.nl-table-mw
+                            table.table.table-striped
+                                thead
+                                    tr
+                                        th Contests name
+                                        th Buy In
+                                        th TEAMs
+                                        th week
+                                        th Payout
+                                        th ENTRY
+                                        th Status
+                            div.nl-table-scroll.height-max
+                                table.table.table-striped
+                                    tbody
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+                                                button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                            td STARTED
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
+                                        tr
+                                            td WK3 G Joe Theismann 5 team Challenge
+                                            td 10
+                                            td 71/100
+                                            td 3
+                                            td 1000
+                                            td
+
+                                            td.st-full FULL
+
+
+
+
+                div.tab-pane(id="gk" role="tabpanel") TAB2
+                div.tab-pane(id="d" role="tabpanel") TAB3
+                div.tab-pane(id="f" role="tabpanel") TAB4
+
