--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -893,6 +893,10 @@ section.nl-section.nl-players.nl-create-team
                     div.nl-team-name your team
                     div.nl-team-data
                         div.row
+                            div.col-7 SALARY CAP:
+                            div.col-5
+                                span $65000
+                        div.row
                             div.col-7 TOTAL SALARY:
                             div.col-5
                                 span $46730
