--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -653,6 +653,10 @@ section.nl-section.nl-players.nl-create-team
                     div.nl-team-name your team
                     div.nl-team-data
                         div.row
+                            div.col-6 SALARY CAP:
+                            div.col-6
+                                span $65000
+                        div.row
                             div.col-6 TOTAL SALARY:
                             div.col-6
                                 span $46730
@@ -673,49 +677,49 @@ section.nl-section.nl-players.nl-create-team
                     div.defender-line
                     div.player-main-block.football
                         div.nl-player-block.nl-FLEX-position(data-position="FLEX")
-                            img(src="assets/img/football/img-FLEX.png" alt="FLEX")
+                            img(src="assets/img/football/FLEX.png" alt="FLEX")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-K-position(data-position="K")
-                            img(src="assets/img/football/img-K.png" alt="K")
+                            img(src="assets/img/football/K.png" alt="K")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-LRB-position(data-position="LRB")
-                            img(src="assets/img/football/img-LRB.png" alt="LRB")
+                            img(src="assets/img/football/LRB.png" alt="LRB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-RRB-position(data-position="RRB")
-                            img(src="assets/img/football/img-RRB.png" alt="RRB")
+                            img(src="assets/img/football/RRB.png" alt="RRB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-QB-position(data-position="QB")
-                            img(src="assets/img/football/img-QB.png" alt="QB")
+                            img(src="assets/img/football/QB.png" alt="QB")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-LWR-position(data-position="LWR")
-                            img(src="assets/img/football/img-LWR.png" alt="LWR")
+                            img(src="assets/img/football/LWR.png" alt="LWR")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-RWR-position(data-position="RWR")
-                            img(src="assets/img/football/img-RWR.png" alt="RWR")
+                            img(src="assets/img/football/RWR.png" alt="RWR")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
                                 p.data <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-TE-position(data-position="TE")
-                            img(src="assets/img/football/img-TE.png" alt="TE")
+                            img(src="assets/img/football/TE.png" alt="TE")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p gronkowski
@@ -763,7 +767,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos LRB
+                                            td.pos RB
                                             td 30
                                             td $0
                                             td
@@ -771,7 +775,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos RRB
+                                            td.pos RB
                                             td 30
                                             td $0
                                             td
@@ -787,7 +791,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos LWR
+                                            td.pos WR
                                             td 30
                                             td $0
                                             td
@@ -795,7 +799,7 @@ section.nl-section.nl-players.nl-create-team
                                         tr
 
                                             td Player name
-                                            td.pos RWR
+                                            td.pos WR
                                             td 30
                                             td $0
                                             td
@@ -804,6 +808,14 @@ section.nl-section.nl-players.nl-create-team
 
                                             td Player name
                                             td.pos TE
+                                            td 30
+                                            td $0
+                                            td
+                                                button.btn.btn-primary.btn-sm.btn-warning cut
+                                        tr
+
+                                            td Player name
+                                            td.pos DEF
                                             td 30
                                             td $0
                                             td
