--- a/markup/_layouts/_content/my-teams-content-soccer.jade
+++ b/markup/_layouts/_content/my-teams-content-soccer.jade
@@ -1,4 +1,4 @@
-section.nl-section.nl-my-teams
+section.nl-section.nl-my-teams.soccer
     div.container.container-wider
         div.row
             div.col-md-12
@@ -32,7 +32,6 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
 
                     .row
                         .col-12
@@ -129,7 +128,7 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                               
 
                     .row
                         .col-12
@@ -225,7 +224,7 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                               
 
                     .row
                         .col-12
@@ -321,7 +320,7 @@ section.nl-section.nl-my-teams
                                 p
                                     | Team:
                                     span.title team NLC2
-                                <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                               
 
                     .row
                         .col-12
