--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -62,15 +62,21 @@ header.nl-header-log
                                 li.nav-item
                                     a.nav-link(href="#") HOME
                                 li.nav-item
-                                    a.nav-link(href="#") MY TEAMS
+                                    a.nav-link(href="my_teams.html") MY TEAMS
                                 li.nav-item
-                                    a.nav-link(href="#") CONTESTS
+                                    a.nav-link(href="contests.html") CONTESTS
                                 li.nav-item
-                                    a.nav-link(href="#") PLAYERS
+                                    a.nav-link(href="players.html") PLAYERS
                                 li.nav-item
                                     a.nav-link(href="#") LIVE SCORES
-                                li.nav-item
-                                    a.nav-link(href="#") MY DASHBOARD
+                                li.nav-item.dropdown
+                                    a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") MY ACCOUNT
+                                    div.dropdown-menu(aria-labelledby="dropdownMenuLink2")
+                                        a.dropdown-item(href="edit_profile.html") Profile
+                                        a.dropdown-item(href="change_password.html") Change Password
+                                        a.dropdown-item(href="#") Friends 
+                                        a.dropdown-item(href="my_balances.html") My Balance
+                                    
                                 li.nav-item.dropdown
                                     a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <img alt="" src="assets/img/flag/USA.png">
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink2")
