--- a/markup/_layouts/_content/my-teams-content-soccer.jade
+++ b/markup/_layouts/_content/my-teams-content-soccer.jade
@@ -29,9 +29,8 @@ section.nl-section.nl-my-teams.soccer
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    | Team:
-                                    span.title team NLC2
+                                
+                                span.title Team name NLC2
 
                     .row
                         .col-12
@@ -125,9 +124,8 @@ section.nl-section.nl-my-teams.soccer
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    | Team:
-                                    span.title team NLC2
+                                
+                                span.title Team name NLC2
                                
 
                     .row
@@ -221,9 +219,8 @@ section.nl-section.nl-my-teams.soccer
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    | Team:
-                                    span.title team NLC2
+                                
+                                span.title Team name NLC2
                                
 
                     .row
@@ -317,9 +314,8 @@ section.nl-section.nl-my-teams.soccer
                     .row
                         .col-12
                             div.nl-team-card.table-data-field
-                                p
-                                    | Team:
-                                    span.title team NLC2
+                                
+                                span.title Team name NLC2
                                
 
                     .row
