--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -5,7 +5,7 @@ section.nl-section.nl-my-teams
                 h1 My teams
         div.row
             div.col-md-12
-                a(href="create_team.html") 
+                a(href="create_team_football.html") 
                     div.btn.btn-primary.btn-lg.btn-create-team Create team
         div.row
             div.col-md-8
@@ -30,7 +30,6 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p
-                                    | Team:
                                     span.title team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
 
@@ -127,7 +126,6 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p
-                                    | Team:
                                     span.title team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
@@ -223,7 +221,6 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p
-                                    | Team:
                                     span.title team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
@@ -319,7 +316,6 @@ section.nl-section.nl-my-teams
                         .col-12
                             div.nl-team-card.table-data-field
                                 p
-                                    | Team:
                                     span.title team NLC2
                                 <img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
