--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -246,3 +246,9 @@ main{
   max-height: calculateRem(410px);
   overflow: scroll;
 }
+
+/* Page headings
+---------------------------------------- */
+.page-heading {
+  margin-bottom: 1rem;
+}
