--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -9322,6 +9322,11 @@ main {
   max-height: 25.625rem;
   overflow: scroll; }
 
+/* Page headings
+---------------------------------------- */
+.page-heading {
+  margin-bottom: 1rem; }
+
 h1, h2, h3, h4, h5 {
   font-weight: 700;
   text-transform: uppercase;
@@ -13091,6 +13096,85 @@ td:nth-child(4).homepage-list-view {
 
 .nl-enter-contests .leaders-list p {
   padding: 0 0.25rem; }
+
+/* Matches component
+---------------------------------------- */
+.matches {
+  width: 100%;
+  height: 140px;
+  overflow-y: hidden;
+  overflow-x: scroll; }
+  .matches__scrollarea {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .matches__result {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    background-color: #607089;
+    border: 1px solid #121a31;
+    color: #fff;
+    font-weight: 400;
+    font-size: 16px; }
+    .matches__result:first-child {
+      border-left: none; }
+    .matches__result:last-child {
+      border-right: none; }
+  .matches__result-header {
+    background-color: #1d2d4e;
+    text-align: center;
+    max-width: 150px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto; }
+    .matches__result-header span {
+      color: #fff;
+      display: inline-block;
+      font-size: 12px;
+      padding: 0.25rem 0.5rem; }
+  .matches__content {
+    padding: 0.5rem 1rem; }
+  .matches__leaders-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-size: 1em; }
+    .matches__leaders-list li {
+      line-height: 1.6em;
+      margin-bottom: 0.5rem; }
+      .matches__leaders-list li img {
+        width: 28px; }
+      .matches__leaders-list li span {
+        float: left;
+        padding: 0.125rem 0.25rem 0rem; }
+      .matches__leaders-list li > span:last-child {
+        float: right; }
+      .matches__leaders-list li:last-child span {
+        font-weight: 300;
+        float: left; }
+      .matches__leaders-list li:after {
+        content: "";
+        display: table;
+        clear: both; }
+  @media (min-width: 992px) {
+    .matches {
+      height: 155px; } }
+
+.matches::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #1d2d4e; }
+
+.matches::-webkit-scrollbar {
+  width: 6px;
+  height: 6px; }
+
+.matches::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5; }
 
 .contact-wrapper {
   background: url(../img/stadion_full.jpg) 0 0 no-repeat;
