--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -68,6 +68,8 @@
 @import "sections/nl-contests";
 @import "sections/nl-enter-contests";
 
+@import "sections/nl-live-score";
+
 @import "sections/contact";
 @import "sections/edit_profile";
 @import "sections/faq";
