--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -1,16 +1,17 @@
 section.nl-section.nl-players.nl-contests
-    div.container.container-wider
+    div.container-fluid 
         div.row.align-items-center
-            div.heading-search
-                h1.heading-search__header contests
-                div.nl-contests-search.heading-search__search
-                    div.input-group
-                        input(type="text" class="form-control" placeholder="Search contests")
-                        span.input-group-btn
-                            button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
+            div.col-lg-12
+                div.heading-search
+                    h1.heading-search__header contests
+                    div.nl-contests-search.heading-search__search
+                        div.input-group
+                            input(type="text" class="form-control" placeholder="Search contests")
+                            span.input-group-btn
+                                button.btn.btn-secondary(type="button") <i class="fa fa-search" aria-hidden="true"></i>
 
         div.row
-            div.col.md-12.col-lg-8
+            div.col-md-12.col-lg-8
                 div.nl-players-table.nl-contests-table
 
 
@@ -20,7 +21,9 @@ section.nl-section.nl-players.nl-contests
                         li.nav-item
                             a.nav-link(data-toggle="tab" href="#gk" role="tab") Free
                         li.nav-item
-                            a.nav-link(data-toggle="tab" href="#d" role="tab") private pool
+                            a.nav-link(data-toggle="tab" href="#d" role="tab") private
+                        li.nav-item
+                            a.nav-link(data-toggle="tab" href="#d" role="tab") My Contests
 
 
                     div.tab-content
@@ -178,23 +181,29 @@ section.nl-section.nl-players.nl-contests
                 div.nl-contest-info-title
                     h3 Contest info
                 div.nl-contest-info-table
-                    table.table.table-info1
+                    table.table.table-info1.text
                         tbody
                             tr
                                 td
                                     div
                                         p.tit CONTEST:
-                                        p Goals for Everyone
-                                        p.tit buy in:
-                                        p 10nlc2
-
-                                td
+                                        p Goals for Everyone in the house
                                 td
                                     div
                                         p.tit teams:
                                         p 7/100
+
+                            tr
+                                td
+                                    div        
+                                        p.tit buy in:
+                                        p 10nlc2
+                                td
+                                    div
                                         p.tit allowed teams:
                                         p 2
+                    table.table.table-info1.buttons
+                        tbody
                             tr
                                 td
                                     button.btn.btn-primary(type='button', data-toggle='modal', data-target='#enterContestsModal') Enter
