put a href around enter button to click to correct page

--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -50,7 +50,8 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -59,7 +60,8 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -68,7 +70,8 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -77,7 +80,8 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -86,7 +90,8 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -95,7 +100,8 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -104,7 +110,8 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
+                                                        a(href='enter_contests.html')
+                                                            button.btn.btn-primary.btn-sm(type='button') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -206,7 +213,8 @@ section.nl-section.nl-players.nl-contests
                         tbody
                             tr
                                 td
-                                    button.btn.btn-primary(type='button', data-toggle='modal', data-target='#enterContestsModal') Enter
+                                    a(href='enter_contests.html')
+                                        button.btn.btn-primary.btn-sm(type='button') enter
                                 td
                                     button.btn.btn-default(type="button") Payout
                                 td
