--- a/markup/_scss/base/_base.scss
+++ b/markup/_scss/base/_base.scss
@@ -252,3 +252,9 @@ main{
 .page-heading {
   margin-bottom: 1rem;
 }
+
+/* Helper classes
+---------------------------------------- */
+.btn-inline {
+  margin-left: .5rem;
+}
