--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -5,6 +5,7 @@
 	height: 140px;
 	overflow-y: hidden;
 	overflow-x: scroll;
+	margin: .25rem 0 .5rem 0;
 
 	&__scrollarea {
 		display: flex;
@@ -87,6 +88,9 @@
 	@include respond-to(allwide) {
 		height: 155px;
 	}
+	@include respond-to(allsmall) {
+		margin-bottom: calculateRem(24px);
+	}
 }
 
 // Add custom scrollbar and make visible
@@ -104,4 +108,46 @@
 	border-radius: 6px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #F5F5F5;
+}
+
+
+/* current-contests
+---------------------------------------- */
+.current-contents {
+	margin: .25rem 0 .5rem 0;
+
+	.nl-table-scroll2 {
+		max-height: 120px;
+	}
+
+	@include respond-to(allsmall) {
+		margin-bottom: calculateRem(24px);
+	}
+}
+
+.table-current-contests {
+	.table {
+		th,
+		td {
+			padding: 0.5rem 0.5rem;
+			text-align: left;
+			max-width: 120px;
+		  white-space: nowrap;
+		  overflow: hidden;
+		  text-overflow: ellipsis;
+
+ 			&:nth-child(1) {
+        width: 35%;
+      }
+      &:nth-child(2) {
+        width: 35%;
+      }
+      &:nth-child(3) {
+        width: 15%;
+      }
+      &:nth-child(3) {
+        width: 15%;
+      }
+		}
+	}
 }
